# nixos-config

./: .gitignore  issues.txt  keyboard.txt  rebuild-flow.sh  rebuild-zephyrus.sh  zephyrus.txt
common/: basic19.nix  basic20.nix  configuration-nspawn.nix  configuration.nix  dotfiles.nix  gitconfig-change.nix  kallsyms.nix  keys-extra.nix  keys.nix  keys2.nix  locale19.nix  locale20.nix  low-battery-monitor.nix  selinux.nix  users.nix
digital-ocean/: configuration.nix  default.nix  keys.nix
digital-ocean-image/: default.nix
dotfiles/: bashrc  gitconfig  install.sh  screenrc  vimrc
examples/: arm.nix  awscli.nix  bash.nix  bash2.nix  default.nix  freerouting-build.nix  freerouting-dependencies.nix  freerouting-shell.nix  freerouting2.nix  freerouting3.nix  gcc.nix  haskell-test.nix  haskell.nix  haskell01.nix  hello.nix  icestorm.nix  jekyll.nix  kicad-shell.nix  maven-and-java.nix  network-transport-tcp-02.nix  network-transport-tcp-03.nix  network-transport-tcp-04.nix  network-transport-tcp.nix  nix  parity.nix  project-m36.nix  secp256k1-haskell.nix  secp256k1.nix  test.nix  welcome.nix  x.nix  xeyes.nix
examples/evils-kicad/: base.nix  default.nix  versions.nix
examples/old/: kicad.nix
examples2/: irc.nix  script-service.nix  welcome.nix
examples2/myparity/: default.nix  parity.nix  service.nix
kvm/: configuration.nix  hardware-configuration.nix  hello-service.nix  my-hello.nix  start-kvm.sh  sync.sh
nix/distributed-process/: foo.nix
nix/network-transport-tcp/: foo.nix  network-transport-tcp.cabal
nix/rank1dynamic/: default.nix  foo.nix  rank1dynamic.cabal
nix/stm-containers/: foo.nix  shell.nix
nix/stm-hamt/: foo.nix  stm-hamt.cabal
nodes/: aws-nixos-01.nix  aws-nixos-02.nix  aws.nix  aws3.nix  configuration-do.nix  configuration-nspawn.nix  dexter.nix  dexter02.nix  flow.nix  nixos03.nix  nspawn-nixos-03.nix  zephyrus-simple.nix  zephyrus.nix  zephyrus02.nix
nspawn/: configuration.nix  start-my-nixos.sh
old/: default.nix.cpy  default.nix.cpy2  default.nix.cpy3  network-transport-tcp-02.nix  rebuild-zephyrus.sh
old/nspawn/: configuration.nix
