Name:          network-transport-tcp
Version:       0.6.0
Cabal-Version: >=1.10
Build-Type:    Simple
License:       BSD3
License-file:  LICENSE
Copyright:     Well-Typed LLP, Tweag I/O Limited
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries
maintainer:    Facundo Domínguez <facundo.dominguez@tweag.io>
Stability:     experimental
Homepage:      http://haskell-distributed.github.com
Bug-Reports:   https://github.com/haskell-distributed/network-transport-tcp/issues
Synopsis:      TCP instantiation of Network.Transport
Description:   TCP instantiation of Network.Transport
Tested-With:   GHC==7.6.3 GHC==7.8.4 GHC==7.10.3
Category:      Network
extra-source-files: ChangeLog

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-distributed/network-transport-tcp

Flag use-mock-network
  Description:     Use mock network implementation (for testing)
  Default:         False

Library
  Build-Depends:   base >= 4.3 && < 5,
                   async >= 2.2 && < 2.3,
                   network-transport >= 0.5 && < 0.6,
                   data-accessor >= 0.2 && < 0.3,
                   containers >= 0.4 && < 0.7,
                   bytestring >= 0.9 && < 0.11,
                   network >= 2.6.2 && < 2.9,
                   uuid >= 1.3 && < 1.4
  Exposed-modules: Network.Transport.TCP,
                   Network.Transport.TCP.Internal
  Default-Extensions: CPP
  default-language: Haskell2010
  Other-Extensions:   RecursiveDo
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src
  If flag(use-mock-network)
    CPP-Options:     -DUSE_MOCK_NETWORK
    Exposed-modules: Network.Transport.TCP.Mock.Socket
                     Network.Transport.TCP.Mock.Socket.ByteString

