name: stm-hamt
version: 1.2.0.4
synopsis: STM-specialised Hash Array Mapped Trie
description:
  A low-level data-structure,
  which can be used to implement higher-level interfaces like
  hash-map and hash-set.
  Such implementations are presented by
  <http://hackage.haskell.org/package/stm-containers the "stm-containers" library>.
category: Data Structures, STM, Concurrency
homepage: https://github.com/nikita-volkov/stm-hamt
bug-reports: https://github.com/nikita-volkov/stm-hamt/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2016, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: library
  default-extensions: Arrows, BangPatterns, BinaryLiterals, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    StmHamt.Hamt
    StmHamt.SizedHamt
  other-modules:
    StmHamt.IntOps
    StmHamt.Constructors.Branch
    StmHamt.Focuses
    StmHamt.Prelude
    StmHamt.Types
    StmHamt.UnfoldlM
    StmHamt.ListT
  build-depends:
    base >=4.9 && <5,
    deferred-folds >=0.9 && <0.10,
    focus >=1 && <1.1,
    hashable <2,
    list-t >=1.0.1 && <1.1,
    -- primitive >=0.7 && <0.8,
    -- primitive-extras >=0.8 && <0.9,
    transformers >=0.5 && <0.6


